# study_note

./: 1770286829-RCFV.md  1770286861-QECS.md  GEMINI.md  Transcendence 변경점.md  basel_problem.md  cross_product.py
.obsidian/: app.json  appearance.json  community-plugins.json  graph.json  hotkeys.json  workspace.json
AI_deep_dive/: 1738147006-OJEO.md  1738147174-YSNO.md  1738147756-FFXP.md  1738156416-HZIT.md  1738157673-VSMS.md  1738162610-ZGDT.md  1738163291-NXPU.md  1738163523-ASQU.md  1738163672-NEWD.md  1738164378-NHCG.md  1738164533-PXMZ.md  1738164567-GLSS.md  1738164604-GGDB.md  1738164891-GCEZ.md  1738165076-STDZ.md  1738165270-RKWF.md  1738165274-DSUG.md  CNN.md  Cross_Product.md  GPS location error propagation.md  Interpretability.md  Lasso_Regression.md  Lecture 2.md  Loss_Function.md  MLP.md  Natural_logarithm.md  Non-linearity.md  Overfitting.md  Phase.md  ReLU.md  SVM.md  Secant Line.md  Softmax.md  Transformer.md  XOR_example.md  adjacent_side.md  angular_frequency.md  attention_mechanism.md  basel_problem.md  convolution.md  (+31 more)
CS107e/: course_reversing.md
Infra/: Kerberos.md  LDAP.md  SSSD.md
Math for AI/: 인과관계의 한계.md
Math for CS/: Difference Quotient.md  GPS location error propagation.md  How to Calculate Circumference.md  Lecture 1.md  (+12 more)
Python/Pandas/: 1763116813-TTFG.md  ArrayManager vs BlockManager.md  Copy-on-Write Memory Strategy.md  DataFrame 구조 이해.md  DataFrame_구조_이해.md  Pandas BlockManager & slice 구조 이해하기.md  Pivot_table, melt.md  playground.py  pyproject.toml
Python/Pandas/gsdb_playground.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+124 files in other folders)
